[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Notes/NoteLineGroup.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Notes/NoteLine.tscn" type="PackedScene" id=2]

[node name="NoteLineGroup" type="Control"]
margin_right = 500.0
margin_bottom = 704.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
type = 0

[node name="NoteLineLeft" parent="." instance=ExtResource( 2 )]
position = Vector2( 100, 130 )
StartColor = Color( 0.8, 0, 0.823529, 1 )
PressColor = Color( 0.258824, 0, 0.27451, 1 )
note_rotation = 270

[node name="NoteLineUp" parent="." instance=ExtResource( 2 )]
position = Vector2( 200, 130 )
StartColor = Color( 0.858824, 0, 0, 1 )
PressColor = Color( 0.352941, 0, 0, 1 )

[node name="NoteLineDown" parent="." instance=ExtResource( 2 )]
position = Vector2( 300, 130 )
StartColor = Color( 0.101961, 0, 0.811765, 1 )
PressColor = Color( 0, 0.0196078, 0.333333, 1 )
note_rotation = 180

[node name="NoteLineRight" parent="." instance=ExtResource( 2 )]
position = Vector2( 400, 130 )
StartColor = Color( 0.0431373, 0.764706, 0, 1 )
PressColor = Color( 0, 0.294118, 0.0313726, 1 )
note_rotation = 90
